--- a/style.css
+++ b/style.css
@@ -68,8 +68,8 @@ nav:first-child li{
 }
 
 .latest_img {
-    width: 5w;
-    height: 10vh;
+    width:6vw;
+    height: 12vh;
 }
 
 .parent{
@@ -105,11 +105,37 @@ nav:first-child li{
     
 }
 
+.latest-heading{
+    margin-left: 2%;
+}
+
+.latest-release div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 1%;
+
+}
+
+.latest-release div ul{
+    /* background-color: rgb(0, 8, 255);  */
+    /* display: inline-block; */
+    width:100%;
+    margin-left: 2%;
+    
+}
+
+.latest-release div ul li{
+    margin: 5%;
+    
+}
 
 .queue{
     grid-area:queue;
     border-left: 0.5px solid white;
     margin-top:100px;
+
+    
     /* margin:100px; */
 }
 
